--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 certifi==0.0.8
 chardet==1.0.1
 distribute==0.6.24
-narwal==0.2.6a
+narwal==0.3.0b
 pymongo==2.1.1
 requests==0.11.2
 wsgiref==0.1.2
